Adicionada as views e configurações para execução. #4

--- a/Codigo/Frota/FrotaWeb/FrotaWeb.csproj
+++ b/Codigo/Frota/FrotaWeb/FrotaWeb.csproj
@@ -12,15 +12,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Pessoa\" />
   </ItemGroup>
 
 </Project>
