Adicionado os diretorios DTO (Data Transfer Objetcs) ao Core do projeto e ModeloVeiculo  no diretorio de Views do projeto.

--- a/Codigo/Frota/Core/Core.csproj
+++ b/Codigo/Frota/Core/Core.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+  </ItemGroup>
+
 </Project>
