--- a/Codigo/Frota/FrotaWeb/FrotaWeb.csproj
+++ b/Codigo/Frota/FrotaWeb/FrotaWeb.csproj
@@ -23,6 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\js\scriptLayoutFinal\bootstrap.min.js" />
+    <None Include="wwwroot\js\scriptLayoutFinal\jquery.min.js" />
+    <None Include="wwwroot\js\scriptLayoutFinal\main.js" />
+    <None Include="wwwroot\js\scriptLayoutFinal\popper.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.22" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.22" />
