VistoriaController VistoriaService IVistoriaService Visualizações. *7

--- a/Codigo/Frota/FrotaWeb/FrotaWeb.csproj
+++ b/Codigo/Frota/FrotaWeb/FrotaWeb.csproj
@@ -49,4 +49,8 @@
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Visualizações\" />
+  </ItemGroup>
+
 </Project>
