--- a/Codigo/Frota/FrotaApi/FrotaApi.csproj
+++ b/Codigo/Frota/FrotaApi/FrotaApi.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\FrotaWeb\FrotaWeb.csproj" />
   </ItemGroup>
 
 </Project>
