--- a/Codigo/Frota/Core/Core.csproj
+++ b/Codigo/Frota/Core/Core.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+  </ItemGroup>
+
 </Project>
