--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Codigo/Frota/FrotaApi/bin
 /Codigo/Frota/Util/bin/
 /Codigo/Frota/Util/obj/
+/Codigo/Frota/FrotaWebTests/bin/
+/Codigo/Frota/FrotaWebTests/obj/
