--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-/Codigo/Frota/Core/obj
-/Codigo/Frota/Core/bin
-/Codigo/Frota/FrotaWeb/obj
-/Codigo/Frota/FrotaWeb/bin
-/Codigo/Frota/Service/obj
-/Codigo/Frota/Service/bin
+# Ignora as pastas bin e obj
+/Codigo/Frota/**/bin/
+/Codigo/Frota/**/obj/
+
+# Ignora o .vs
 /Codigo/Frota/.vs
 /.vs
-/Codigo/Frota/FrotaApi/obj
-/Codigo/Frota/FrotaApi/bin
-/Codigo/Frota/Util/bin/
-/Codigo/Frota/Util/obj/
-/Codigo/Frota/FrotaWebTests/bin/
-/Codigo/Frota/FrotaWebTests/obj/
