Ajustes no projeto API, #109.

--- a/Codigo/Frota/FrotaApi/appsettings.json
+++ b/Codigo/Frota/FrotaApi/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "FrotaDatabase": "server=localhost;port=3306;user=root;password=123456;database=Frota"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
