--- a/Codigo/Frota/FrotaWeb/appsettings.json
+++ b/Codigo/Frota/FrotaWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FrotaDatabase": "server=localhost;port=3306;user=root;password=123456;database=Frota"
+    "FrotaDatabase": "Server=MYSQL5050.site4now.net;Database=db_aafdfe_frotadb;Uid=aafdfe_frotadb;Pwd=SmartFrota2025"
   },
   "Logging": {
     "LogLevel": {
