Correção realizada, close #175

--- a/Codigo/Frota/FrotaApi/FrotaApi.csproj
+++ b/Codigo/Frota/FrotaApi/FrotaApi.csproj
@@ -21,7 +21,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\FrotaWeb\FrotaWeb.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
+    <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
 
 </Project>
