Implementação parcial da funcionalidade de confirmação via email

--- a/Codigo/Frota/FrotaWeb/appsettings.json
+++ b/Codigo/Frota/FrotaWeb/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp.seuprovedor.com",
+    "SmtpPort": 587,
+    "Username": "seuemail@provedor.com",
+    "Password": "suaSenha",
+    "From": "seuemail@provedor.com"
+  }
 }
