Criação de usuário e confirmação concluidos

--- a/Codigo/Frota/FrotaWeb/appsettings.json
+++ b/Codigo/Frota/FrotaWeb/appsettings.json
@@ -9,11 +9,11 @@
     }
   },
   "AllowedHosts": "*",
-  "EmailSettings": {
-    "SmtpServer": "smtp.seuprovedor.com",
-    "SmtpPort": 587,
-    "Username": "seuemail@provedor.com",
-    "Password": "suaSenha",
-    "From": "seuemail@provedor.com"
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "frota.itatechjr@gmail.com",
+    "Password": "mdzdoxwshtlckqnt",
+    "From": "frota.itatechjr@gmail.com"
   }
 }
