Revert "Implementação do cadastro de usuário e confirmação de  conta"

--- a/Codigo/Frota/FrotaWeb/appsettings.json
+++ b/Codigo/Frota/FrotaWeb/appsettings.json
@@ -8,12 +8,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Smtp": {
-    "Host": "smtp.gmail.com",
-    "Port": "587",
-    "Username": "frota.itatechjr@gmail.com",
-    "Password": "mdzdoxwshtlckqnt",
-    "From": "frota.itatechjr@gmail.com"
-  }
+  "AllowedHosts": "*"
 }
