--- a/Codigo/Frota/FrotaWeb/appsettings.json
+++ b/Codigo/Frota/FrotaWeb/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "frota.itatechjr@gmail.com",
+    "Password": "mdzdoxwshtlckqnt",
+    "From": "frota.itatechjr@gmail.com"
+  }
 }
