Implementação da controladora para abastecimento

--- a/Codigo/Frota/FrotaApi/appsettings.json
+++ b/Codigo/Frota/FrotaApi/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "FrotaDatabase": "server=localhost;port=3306;user=root;password=123456;database=Frota"
-    },
+  "ConnectionStrings": {
+    "FrotaDatabase": "Server=MYSQL5050.site4now.net;Database=db_aafdfe_frotadb;Uid=aafdfe_frotadb;Pwd=SmartFrota2025"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
