Implementação inicial da API para rotina de uso do motorista

--- a/Codigo/Frota/FrotaApi/appsettings.json
+++ b/Codigo/Frota/FrotaApi/appsettings.json
@@ -2,11 +2,16 @@
   "ConnectionStrings": {
     "FrotaDatabase": "Server=MYSQL5050.site4now.net;Database=db_aafdfe_frotadb;Uid=aafdfe_frotadb;Pwd=SmartFrota2025"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Jwt": {
+    "Key": "Ch4v3S3cR3t4Fr0t4Publ1c42023@#$%&*123456789ABCDE",
+    "Issuer": "FrotaPublicaApi",
+    "Audience": "FrotaPublicaApp"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
