--- a/Codigo/Frota - mobile/frota/pubspec.yaml
+++ b/Codigo/Frota - mobile/frota/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
   local_auth: ^2.1.6
+  google_maps_flutter: ^2.5.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
