--- a/Codigo/Frota - mobile/frota/ios/Runner/Info.plist
+++ b/Codigo/Frota - mobile/frota/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Este aplicativo precisa de acesso à localização para mostrar sua posição no mapa.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Este aplicativo precisa de acesso à localização para mostrar sua posição no mapa.</string>
 </dict>
 </plist>
