--- a/Codigo/Frota - mobile/frota/pubspec.yaml
+++ b/Codigo/Frota - mobile/frota/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   local_auth: ^2.1.6
   google_maps_flutter: ^2.5.3
   intl: ^0.18.1
+  geolocator: ^10.1.0
+  geocoding: ^2.1.0
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
