--- a/Codigo/Frota - mobile/frota/pubspec.yaml
+++ b/Codigo/Frota - mobile/frota/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
+  provider: ^6.0.0
   http: ^1.1.0
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
@@ -41,6 +41,8 @@ dependencies:
   geolocator: ^10.1.0
   geocoding: ^2.1.0
   flutter_typeahead: ^5.2.0
+  connectivity_plus: ^5.0.2
+  sqflite: ^2.3.2+1
 
 dev_dependencies:
   flutter_test:
