Melhorias gerais no padrão de interface do site

--- a/Codigo/Frota - mobile/frota/.gitignore
+++ b/Codigo/Frota - mobile/frota/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Keystore files - DO NOT COMMIT THESE!
+*.jks
+*.keystore
+**/key.properties
